Add accessible error messages to common inputs
Common inputs intended to be used everywhere by including files, thus can be changed easy in single file. Error messages appear on POST in customer Front office

--- a/catalog/view/theme/helium/template/common/fields/address1.twig
+++ b/catalog/view/theme/helium/template/common/fields/address1.twig
@@ -1,4 +1,4 @@
-<div class="form-group {% if required %} required {% endif %}">
+<div class="form-group {% if required %} required {% endif %} {% if error_address_1 %} has-error {% endif %}">
   <label for="input-{{ type }}-address-1">{{ entry_address_1 }}</label>
   <input
     type="text"
@@ -12,4 +12,7 @@
     minlength="3" maxlength="32"
     autocomplete="address-line1"
   />
+  {% if error_address_1 %}
+    <span class="text-danger" role="alert">{{ error_address_1 }}</span>
+  {% endif %}
 </div>
