--- a/catalog/view/theme/helium/template/common/fields/firstname.twig
+++ b/catalog/view/theme/helium/template/common/fields/firstname.twig
@@ -1,4 +1,4 @@
-<div class="form-group {% if required %} required {% endif %}">
+<div class="form-group {% if required %} required {% endif %} {% if error_firstname %} has-error {% endif %}">
     <label for="input-{{ type }}-firstname">{{ entry_firstname }}</label>
     <input
       type="text"
@@ -12,4 +12,7 @@
       minlength="3" maxlength="32"
       autocomplete="given-name"
     />
+    {% if error_firstname %}
+      <span role="alert" class="text-danger">{{ error_firstname }}</span>
+    {% endif %}
 </div>
