--- a/catalog/view/theme/helium/template/common/fields/lastname.twig
+++ b/catalog/view/theme/helium/template/common/fields/lastname.twig
@@ -1,4 +1,4 @@
-<div class="form-group {% if required %} required {% endif %}">
+<div class="form-group {% if required %} required {% endif %} {% if error_lastname %} has-error {% endif %}">
     <label for="input-{{ type }}-lastname">{{ entry_lastname }}</label>
     <input
       type="text"
@@ -12,4 +12,7 @@
       minlength="3" maxlength="32"
       autocomplete="family-name"
     />
+    {% if error_lastname %}
+      <span role="alert" class="text-danger">{{ error_lastname }}</span>
+    {% endif %}
 </div>
