--- a/catalog/view/theme/helium/template/checkout/payment_address.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_address.twig
@@ -1,4 +1,4 @@
-<form action="index.php?route=checkout/payment_address/save" method="post" id="payment_address">
+<form action="index.php?route=checkout/payment_address/save" method="post" id="payment_address" enctype="multipart/form-data">
   {% if addresses %}
     <div class="form-control">
       <input id="payment_address_existing" type="radio" name="payment_address" value="existing" checked="checked" />
@@ -20,386 +20,17 @@
       <label for="payment_address_new">{{ text_address_new }}</label>
     </div>
   {% endif %}
-
   <div id="payment-new" style="display: {% if addresses %}none{% else %}block{% endif %};">
-    <div class="form-group required">
-      <label for="input-payment-firstname">{{ entry_firstname }}</label>
-      <input
-        type="text"
-        name="firstname"
-        value="{{ firstname }}"
-        placeholder="{{ entry_firstname }}"
-        id="input-payment-firstname"
-        inputmode="text"
-        enterkeyhint="next"
-        autocapitalize="words"
-        minlength="3" maxlength="32"
-      />
-    </div>
-    <div class="form-group required">
-      <label for="input-payment-lastname">{{ entry_lastname }}</label>
-      <input
-        type="text"
-        name="lastname"
-        value="{{ lastname }}"
-        placeholder="{{ entry_lastname }}"
-        id="input-payment-lastname"
-        inputmode="text"
-        enterkeyhint="next"
-        autocapitalize="words"
-        minlength="3" maxlength="32"
-      />
-    </div>
-    <div class="form-group">
-      <label for="input-payment-company">{{ entry_company }}</label>
-      <input
-        type="text"
-        name="company"
-        value="{{ company }}"
-        placeholder="{{ entry_company }}"
-        id="input-payment-company"
-        inputmode="text"
-        enterkeyhint="next"
-        autocapitalize="words"
-        minlength="3" maxlength="64"
-        autocomplete="on"
-      />
-    </div>
-    <div class="form-group required">
-      <label for="input-payment-address-1">{{ entry_address_1 }}</label>
-      <input
-        type="text"
-        name="address_1"
-        value="{{ address_1 }}"
-        placeholder="{{ entry_address_1 }}"
-        id="input-payment-address-1"
-        inputmode="text"
-        enterkeyhint="next"
-        autocapitalize="words"
-        minlength="3" maxlength="32"
-        autocomplete="on"
-      />
-    </div>
-    <div class="form-group">
-      <label for="input-payment-address-2">{{ entry_address_2 }}</label>
-      <input
-        type="text"
-        name="address_2"
-        value="{{ address_2 }}"
-        placeholder="{{ entry_address_2 }}"
-        id="input-payment-address-2"
-        inputmode="text"
-        enterkeyhint="next"
-        autocapitalize="words"
-        minlength="3" maxlength="32"
-        autocomplete="on"
-      />
-    </div>
-    <div class="form-group required">
-      <label for="input-payment-city">{{ entry_city }}</label>
-      <input 
-        type="text" 
-        name="city" 
-        value="{{ city }}"
-        placeholder="{{ entry_city }}" 
-        id="input-payment-city"
-        inputmode="text"
-        enterkeyhint="next"
-        autocapitalize="words"
-        minlength="3" maxlength="32"
-        autocomplete="on"
-      />
-    </div>
-    <div class="form-group">
-      <label for="input-payment-postcode">{{ entry_postcode }}</label>
-      <input
-        type="text"
-        name="postcode"
-        value="{{ postcode }}"
-        placeholder="{{ entry_postcode }}"
-        id="input-payment-postcode"
-        inputmode="numeric"
-        enterkeyhint="next"
-        minlength="3" maxlength="32"
-        autocomplete="on"
-      />
-    </div>
-
-    <div class="form-group required">
-      <label for="input-payment-country">{{ entry_country }}</label>
-      <select name="country_id" id="input-payment-country">
-        <option value="">{{ text_select }}</option>
-        {% for country in countries %}
-          {% if country.country_id == country_id %}
-            <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
-          {% else %}
-            <option value="{{ country.country_id }}">{{ country.name }}</option>
-          {% endif %}
-        {% endfor %}
-      </select>
-    </div>
-
-    <div class="form-group required">
-      <label for="input-payment-zone">{{ entry_zone }}</label>
-      <select name="zone_id" id="input-payment-zone"></select>
-    </div>
-
-    {% for custom_field in custom_fields %}
-    {% if custom_field.type == 'select' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-        {{ custom_field.name }}
-      </label>
-      <div class="col-sm-10">
-        <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">
-          <option value="">{{ text_select }}</option>
-          {% for custom_field_value in custom_field.custom_field_value %}
-          <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'radio' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-          {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="form-control">
-            <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
-            <label>{{ custom_field_value.name }}</label>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'checkbox' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label>{{ custom_field.name }}</label>
-        <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-          {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="form-control">
-            <label>{{ custom_field_value.name }}</label>
-            <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
-          </div>
-          {% endfor %}
-      </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'text' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'textarea' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'file' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"> {{ button_upload }}</button>
-        <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-      </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'date' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input
-        type="date"
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-        value="{{ custom_field.value }}"
-        placeholder="{{ custom_field.name }}"
-        step="1"
-        id="input-payment-custom-field{{ custom_field.custom_field_id }}"
-        data-date-format="YYYY-MM-DD"
-      />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'time' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input 
-        type="time" 
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-        value="{{ custom_field.value }}" 
-        placeholder="{{ custom_field.name }}" 
-        data-date-format="HH:mm" 
-        id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
-        min="08:00" max="20:00"
-        step="3600"
-      />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'datetime' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input 
-        type="datetime-local"
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-        value="{{ custom_field.value }}"
-        placeholder="{{ custom_field.name }}" 
-        data-date-format="YYYY-MM-DD HH:mm" 
-        id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
-        step="3600"
-      />
-    </div>
-    {% endif %}
-    {% endfor %}
+    {% include 'helium/template/common/fields/firstname.twig' with {required: true,  type: 'payment'} %}
+    {% include 'helium/template/common/fields/lastname.twig'  with {required: true,  type: 'payment'} %}
+    {% include 'helium/template/common/fields/company.twig'   with {required: false, type: 'payment'} %}
+    {% include 'helium/template/common/fields/address1.twig'  with {required: true,  type: 'payment'} %}
+    {% include 'helium/template/common/fields/address2.twig'  with {required: false, type: 'payment'} %}
+    {% include 'helium/template/common/fields/city.twig'      with {required: true,  type: 'payment'} %}
+    {% include 'helium/template/common/fields/country.twig'   with {required: true,  type: 'payment'} %}
+    {% include 'helium/template/common/custom_fields.twig'    with {type: 'payment', location: 'address'} %}
   </div>
   <div class="grid-footer">
     <button type="button" id="button-payment-address" class="primary" data-action="saveForm" data-form="payment_address" data-url="checkout/payment_address/save">{{ button_continue }}</button>
   </div>
 </form>
-<script type="text/javascript"><!--
-// $('input[name=\'payment_address\']').on('change', function() {
-// 	if (this.value == 'new') {
-// 		$('#payment-existing').hide();
-// 		$('#payment-new').show();
-// 	} else {
-// 		$('#payment-existing').show();
-// 		$('#payment-new').hide();
-// 	}
-// });
-//--></script>
-<script type="text/javascript"><!--
-// Sort the custom fields
-// $('#collapse-payment-address .form-group[data-sort]').detach().each(function() {
-// 	if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#collapse-payment-address .form-group').length-2) {
-// 		$('#collapse-payment-address .form-group').eq(parseInt($(this).attr('data-sort'))+2).before(this);
-// 	}
-
-// 	if ($(this).attr('data-sort') > $('#collapse-payment-address .form-group').length-2) {
-// 		$('#collapse-payment-address .form-group:last').after(this);
-// 	}
-
-// 	if ($(this).attr('data-sort') == $('#collapse-payment-address .form-group').length-2) {
-// 		$('#collapse-payment-address .form-group:last').after(this);
-// 	}
-
-// 	if ($(this).attr('data-sort') < -$('#collapse-payment-address .form-group').length-2) {
-// 		$('#collapse-payment-address .form-group:first').before(this);
-// 	}
-// });
-//--></script>
-<script type="text/javascript"><!--
-// $('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('click', function() {
-// 	var element = this;
-
-// 	$('#form-upload').remove();
-
-// 	$('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
-
-// 	$('#form-upload input[name=\'file\']').trigger('click');
-
-// 	if (typeof timer != 'undefined') {
-//     	clearInterval(timer);
-// 	}
-
-// 	timer = setInterval(function() {
-// 		if ($('#form-upload input[name=\'file\']').val() != '') {
-// 			clearInterval(timer);
-
-// 			$.ajax({
-// 				url: 'index.php?route=tool/upload',
-// 				type: 'post',
-// 				dataType: 'json',
-// 				data: new FormData($('#form-upload')[0]),
-// 				cache: false,
-// 				contentType: false,
-// 				processData: false,
-// 				beforeSend: function() {
-// 					$(element).button('loading');
-// 				},
-// 				complete: function() {
-// 					$(element).button('reset');
-// 				},
-// 				success: function(json) {
-// 					$(element).parent().find('.text-danger').remove();
-
-// 					if (json['error']) {
-// 						$(element).parent().find('input[name^=\'custom_field\']').after('<span class="text-danger">' + json['error'] + '</div>');
-// 					}
-
-// 					if (json['success']) {
-// 						alert(json['success']);
-
-// 						$(element).parent().find('input[name^=\'custom_field\']').val(json['code']);
-// 					}
-// 				},
-// 				error: function(xhr, ajaxOptions, thrownError) {
-// 					alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-// 				}
-// 			});
-// 		}
-// 	}, 500);
-// });
-//--></script>
-<script type="text/javascript"><!--
-// $('.date').datetimepicker({
-// 	language: '{{ datepicker }}',
-// 	pickTime: false
-// });
-
-// $('.time').datetimepicker({
-// 	language: '{{ datepicker }}',
-// 	pickDate: false
-// });
-
-// $('.datetime').datetimepicker({
-// 	language: '{{ datepicker }}',
-// 	pickDate: true,
-// 	pickTime: true
-// });
-//--></script>
-<script type="text/javascript"><!--
-$('#collapse-payment-address select[name=\'country_id\']').on('change', function() {
-	$.ajax({
-		url: 'index.php?route=checkout/checkout/country&country_id=' + this.value,
-		dataType: 'json',
-		beforeSend: function() {
-			$('#collapse-payment-address select[name=\'country_id\']').prop('disabled', true);
-		},
-		complete: function() {
-			$('#collapse-payment-address select[name=\'country_id\']').prop('disabled', false);
-		},
-		success: function(json) {
-			if (json['postcode_required'] == '1') {
-				$('#collapse-payment-address input[name=\'postcode\']').parent().parent().addClass('required');
-			} else {
-				$('#collapse-payment-address input[name=\'postcode\']').parent().parent().removeClass('required');
-			}
-
-			html = '<option value="">{{ text_select }}</option>';
-
-			if (json['zone'] && json['zone'] != '') {
-				for (i = 0; i < json['zone'].length; i++) {
-					html += '<option value="' + json['zone'][i]['zone_id'] + '"';
-
-					if (json['zone'][i]['zone_id'] == '{{ zone_id }}') {
-						html += ' selected="selected"';
-					}
-
-					html += '>' + json['zone'][i]['name'] + '</option>';
-				}
-			} else {
-				html += '<option value="0" selected="selected">{{ text_none }}</option>';
-			}
-
-			$('#collapse-payment-address select[name=\'zone_id\']').html(html);
-		},
-		error: function(xhr, ajaxOptions, thrownError) {
-			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-		}
-	});
-});
-
-$('#collapse-payment-address select[name=\'country_id\']').trigger('change');
-//--></script>
