--- a/catalog/view/theme/helium/template/checkout/shipping_address.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_address.twig
@@ -1,4 +1,4 @@
-<form action="index.php?route=checkout/shipping_address/save" method="post" id="shipping_address">
+<form action="index.php?route=checkout/shipping_address/save" method="post" id="shipping_address" enctype="multipart/form-data">
 <fieldset>
   <legend>{{ text_delivery_address }}</legend>
     {% if addresses %}
@@ -23,136 +23,19 @@
       </div>
     {% endif %}
     <br />
-    <div id="shipping-new" style="display: {% if addresses %}none{% else %}block{% endif %};">
-        
-      <div class="form-group required">
-        <label for="input-shipping-firstname">{{ entry_firstname }}</label>
-        <input
-          type="text"
-          name="firstname"
-          value="{{ firstname }}"
-          placeholder="{{ entry_firstname }}"
-          id="input-shipping-firstname"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-        />
-      </div>
-    
-      <div class="form-group required">
-        <label for="input-shipping-lastname">{{ entry_lastname }}</label>
-        <input
-          type="text"
-          name="lastname"
-          value="{{ lastname }}"
-          placeholder="{{ entry_lastname }}"
-          id="input-shipping-lastname"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-        />
-      </div>
-    
-      <div class="form-group">
-        <label for="input-shipping-company">{{ entry_company }}</label>
-        <input
-          id="input-shipping-company"
-          type="text"
-          name="company"
-          value="{{ company }}"
-          placeholder="{{ entry_company }}"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="64"
-          autocomplete="on"
-        />
-      </div>
-      <div class="form-group required">
-        <label for="input-shipping-address-1">{{ entry_address_1 }}</label>
-        <input
-          id="input-shipping-address-1"
-          type="text"
-          name="address_1"
-          value="{{ address_1 }}"
-          placeholder="{{ entry_address_1 }}"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-          autocomplete="on"
-        />
-      </div>
-      <div class="form-group">
-          <label for="input-shipping-address-2">{{ entry_address_2 }}</label>
-          <input
-            id="input-shipping-address-2"
-            type="text"
-            name="address_2"
-            value="{{ address_2 }}"
-            placeholder="{{ entry_address_2 }}"
-            inputmode="text"
-            enterkeyhint="next"
-            autocapitalize="words"
-            minlength="3" maxlength="32"
-            autocomplete="on"
-          />
-      </div>
-      <div class="form-group required">
-        <label for="input-shipping-city">{{ entry_city }}</label>
-        <input 
-          id="input-shipping-city"
-          type="text" 
-          name="city"
-          value="{{ city }}"
-          placeholder="{{ entry_city }}" 
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-          autocomplete="on"
-        />
-      </div>
-      <div class="form-group">
-        <label for="input-shipping-postcode">{{ entry_postcode }}</label>
-        <input
-          type="text"
-          name="postcode"
-          value="{{ postcode }}"
-          placeholder="{{ entry_postcode }}"
-          id="input-shipping-postcode"
-          inputmode="numeric"
-          enterkeyhint="next"
-          minlength="3" maxlength="32"
-          autocomplete="on"
-        />
-      </div>
-      <div class="form-group required">
-        <label for="input-shipping-country">{{ entry_country }}</label>
-        <select name="country_id" id="input-shipping-country" >
-          <option value="">{{ text_select }}</option>
-          {% for country in countries %}
-            {% if country.country_id == country_id %}
-              <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
-            {% else %}
-              <option value="{{ country.country_id }}">{{ country.name }}</option>
-            {% endif %}
-          {% endfor %}
-        </select>
-      </div>
-      <div class="form-group required">
-        <label for="input-shipping-zone">{{ entry_zone }}</label>
-        <select name="zone_id" id="input-shipping-zone" class="form-group">
-        </select>
-      </div>
+    <div id="shipping-new" style="display: {% if addresses %}none{% else %}block{% endif %};">        
+      {% include 'helium/template/common/fields/firstname.twig' with {required: true,  type: 'shipping'} %}
+      {% include 'helium/template/common/fields/lastname.twig'  with {required: true,  type: 'shipping'} %}
+      {% include 'helium/template/common/fields/company.twig'   with {required: false, type: 'shipping'} %}
+      {% include 'helium/template/common/fields/address1.twig'  with {required:  true,  type: 'shipping'} %}
+      {% include 'helium/template/common/fields/address2.twig'  with {required: false, type: 'shipping'} %}
+      {% include 'helium/template/common/fields/city.twig'      with {required: true,  type: 'shipping'} %}
+      {% include 'helium/template/common/fields/country.twig'   with {required: true,  type: 'shipping'} %}
       {% include 'helium/template/common/custom_fields.twig' with {type: 'shipping', location: 'address'} %}
     </div>
     </fieldset>
     <div class="grid-footer">
       <button type="button" id="button-shipping-address" class="primary" data-action="saveForm" data-form="shipping_address" data-url="checkout/shipping_address/save">{{ button_continue }}</button>
-      {# <button type="button" id="button-shipping-address" class="primary">{{ button_continue }}</button> #}
     </div>
 </form>
 
