--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -142,6 +142,7 @@ select,
 textarea {
     -webkit-appearance:none
 }
+option {zoom: 1.15;}
 textarea {
     display:block;
     margin: 0 0 1rem 0;
@@ -295,13 +296,14 @@ input[type="date"]::after, input[type="datetime-local"]::after {
 
 
 /* Forms */
-form {display:flex; flex-direction: column;}
+form, .form {display:flex;flex-direction: column;align-items: center;/* width: min(800px, 100%); *//* justify-self: center; */}
 label {cursor:pointer;user-select: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;display: flex;flex-direction: row;align-items: center; display: inline-block;}
 .form-group {display: flex;flex: 1;align-items: center;padding: 0.5rem;border-radius: var(--radius);flex-wrap: wrap;position: relative;/* padding: .5rem; */}
 .form-group label {flex: 1 1 auto;max-width: 8rem}
 /* For multiple lined up inputs in form group */
 .form-group input:first-of-type:not(:last-of-type) {border-radius: var(--radius) 0 0 var(--radius);margin-right: 2px;}
 .form-group input:last-of-type:not(:first-of-type) {border-radius: 0 var(--radius) var(--radius) 0;}
+.grid-footer {display: flex;flex-direction: column;padding: 1rem 0;flex: 1 0 100%;width: min(800px, 100%);}
 
 
 .inline-group {display: flex;align-items: center;flex: 1;padding: 0;}
@@ -538,9 +540,9 @@ hgroup > * {
 /* Typography */
 ul {margin: .5rem;padding: 0 .5rem;}
 /* Tables */
-table {border-collapse:collapse;margin-bottom:10px;width:100%;table-layout:fixed;border-radius: var(--radius);overflow: hidden;}
+table {border-collapse:collapse;margin-bottom:10px;width:100%;table-layout:fixed;border-radius: var(--radius);overflow: hidden;max-width: 100%;}
 table caption, td, th {text-align:left}
-td,th {padding:6px;/* vertical-align:top; */word-wrap:break-word;}
+td,th {padding:6px;/* vertical-align:top; */word-wrap:break-word;width: auto;min-width: 40px;max-width: 100%;}
 td:first-child{/* border-radius: var(--radius) 0 0 var(--radius); */}
 td:last-child{/* border-radius: 0 var(--radius) var(--radius) 0; */}
 
@@ -567,8 +569,11 @@ fieldset {
     padding:10px;
     display: flex;
     flex-direction: column;
-    margin: 1rem 0;
+    margin: 1rem 1px;
     border: none;
+    width: min(800px, 100%);
+    align-self: center;
+    /* flex: 1 0 auto; */
 }
 /* If input is not in .form-group */
 fieldset>input, fieldset>select {
@@ -619,7 +624,7 @@ h1,h2,h3,h4,h5,h6,th {color:var(--color-text-bright);font-weight:600}
     box-shadow: var(--blocks-shadow);
 }
 /* Details - related to accordion */
-details {display:flex;flex-direction:column;align-items:flex-start;margin:0;overflow:hidden}
+details {display:flex;flex-direction:column;align-items:flex-start;margin:0;overflow:hidden;box-shadow: var(--inputs-shadow);}
 details[open] {padding:0}
 details>:last-child {margin-bottom:0}
 details[open] summary {margin-bottom:0}
@@ -752,8 +757,12 @@ button.primary {
     user-select: none;
     -webkit-user-select: none;
     display: flex;
+    /* max-width: 300px; */
     -moz-user-select: none;
     -ms-user-select: none;
+}
+button#js_button_confirm {
+    background-image: linear-gradient(45deg, #496dc1, #338b17);
 }
 button:disabled,
 input:disabled,
