Replace fields with {% include %}

--- a/catalog/view/theme/helium/template/account/address_form.twig
+++ b/catalog/view/theme/helium/template/account/address_form.twig
@@ -6,298 +6,18 @@
   
   <form action="{{ action }}" method="post" enctype="multipart/form-data" >
     <fieldset>
-      
-      <div class="form-group required">
-        <label for="input-firstname">{{ entry_firstname }}</label>        
-        <input
-          type="text"
-          name="firstname"
-          value="{{ firstname }}"
-          placeholder="{{ entry_firstname }}"
-          id="input-firstname"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-        />
-        {% if error_firstname %}
-          <span class="text-danger">{{ error_firstname }}</div>
-        {% endif %}
-      </div>
-
-      <div class="form-group required">
-        <label for="input-lastname">{{ entry_lastname }}</label>
-        <input
-          type="text"
-          name="lastname"
-          value="{{ lastname }}"
-          placeholder="{{ entry_lastname }}"
-          id="input-lastname"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-        />
-        {% if error_lastname %}
-          <span class="text-danger">{{ error_lastname }}</div>
-        {% endif %}
-      </div>
-
-      <div class="form-group">
-        <label for="input-company">{{ entry_company }}</label>
-        <input
-          type="text"
-          name="company"
-          value="{{ company }}"
-          placeholder="{{ entry_company }}"
-          id="input-company"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="64"
-          autocomplete="on"
-        />
-      </div>
-
-      <div class="form-group required">
-        <label for="input-address-1">{{ entry_address_1 }}</label>
-        <input
-          type="text"
-          name="address_1"
-          value="{{ address_1 }}"
-          placeholder="{{ entry_address_1 }}"
-          id="input-address-1"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-          autocomplete="on"
-        />
-        {% if error_address_1 %}
-          <span class="text-danger">{{ error_address_1 }}</div>
-        {% endif %}
-      </div>
-      <div class="form-group">
-        <label for="input-address-2">{{ entry_address_2 }}</label>
-        <input
-          type="text"
-          name="address_2"
-          value="{{ address_2 }}"
-          placeholder="{{ entry_address_2 }}"
-          id="input-address-2"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-          autocomplete="on"
-        />
-      </div>
-      <div class="form-group required">
-        <label for="input-city">{{ entry_city }}</label>
-        <input 
-          type="text" 
-          name="city"
-          value="{{ city }}"
-          placeholder="{{ entry_city }}" 
-          id="input-city"
-          inputmode="text"
-          enterkeyhint="next"
-          autocapitalize="words"
-          minlength="3" maxlength="32"
-          autocomplete="on"
-        />
-        {% if error_city %}
-          <span class="text-danger">{{ error_city }}</div>
-        {% endif %}
-      </div>
-      <div class="form-group">
-        <label for="input-postcode">{{ entry_postcode }}</label>
-        <input
-          type="text"
-          name="postcode"
-          value="{{ postcode }}"
-          placeholder="{{ entry_postcode }}"
-          id="input-postcode"
-          inputmode="numeric"
-          enterkeyhint="next"
-          minlength="3" maxlength="32"
-          autocomplete="on"
-        />
-        {% if error_postcode %}
-          <span class="text-danger">{{ error_postcode }}</div>
-        {% endif %}
-      </div>
-      <div class="form-group required">
-        <label for="input-country">{{ entry_country }}</label>
-        <select name="country_id" id="input-country">
-          <option value="">{{ text_select }}</option>
-          {% for country in countries %}
-            {% if country.country_id == country_id %}
-              <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
-            {% else %}
-              <option value="{{ country.country_id }}">{{ country.name }}</option>
-            {% endif %}
-          {% endfor %}
-        </select>
-        {% if error_country %}
-          <span class="text-danger">{{ error_country }}</div>
-        {% endif %}
-      </div>
-      <div class="form-group required">
-        <label for="input-zone">{{ entry_zone }}</label>
-        <select name="zone_id" id="input-zone" ></select>
-          {% if error_zone %}
-            <span class="text-danger">{{ error_zone }}</div>
-          {% endif %}
-      </div>
-
-
-      {% for custom_field in custom_fields %}
-      {% if custom_field.type == 'select' %}
-        <div class="form-group {% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-          <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-custom-field{{ custom_field.custom_field_id }}" >
-            <option value="">{{ text_select }}</option>
-            {% for custom_field_value in custom_field.custom_field_value %}
-              {% if address_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == address_custom_field[custom_field.custom_field_id] %}
-                <option value="{{ custom_field_value.custom_field_value_id }}" selected="selected">{{ custom_field_value.name }}</option>
-              {% else %}
-                <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-              {% endif %}
-            {% endfor %}
-          </select>
-          {% if error_custom_field[custom_field.custom_field_id] %}
-            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %}
-        </div>
-      {% endif %}
-      {% if custom_field.type == 'radio' %}
-        <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          {% for custom_field_value in custom_field.custom_field_value %}
-            <div class="form-control"> 
-              {% if address_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == address_custom_field[custom_field.custom_field_id] %}
-              <label for="custom_field_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
-              <input
-                id="custom_field_{{ custom_field.custom_field_id }}"
-                type="radio" 
-                name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-                value="{{ custom_field_value.custom_field_value_id }}" 
-                checked="checked" />
-              {% else %}
-                <label for="custom_field_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
-                <input id="custom_field_{{ custom_field.custom_field_id }}" type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
-              {% endif %}
-            </div>
-          {% endfor %}
-          {% if error_custom_field[custom_field.custom_field_id] %}
-            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} 
-        </div>
-      {% endif %}
-      {% if custom_field.type == 'checkbox' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label>{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <div> {% for custom_field_value in custom_field.custom_field_value %}
-            <div class="form-control"> {% if address_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id in address_custom_field[custom_field.custom_field_id] %}
-                <label for="custom_field_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
-                <input id="custom_field_{{ custom_field.custom_field_id }}" type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" checked="checked" />
-              {% else %}
-                <label for="custom_field_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
-                <input id="custom_field_{{ custom_field.custom_field_id }}" type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
-              {% endif %} </div>
-            {% endfor %} </div>
-          {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'text' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" />
-          {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} 
-        </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'textarea' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" >{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}</textarea>
-          {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'file' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label>{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"> {{ button_upload }}</button>
-          <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id]['code'] %}{{ address_custom_field[custom_field.custom_field_id]['code'] }}{% endif %}" />
-          <span>{{ address_custom_field[custom_field.custom_field_id]['name'] }}</span>
-          {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'date' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <div class="input-group date">
-            <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-custom-field{{ custom_field.custom_field_id }}" />
-            <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </div>
-          {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'time' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <div class="input-group time">
-            <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-custom-field{{ custom_field.custom_field_id }}" />
-            <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </div>
-          {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'datetime' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <div class="input-group datetime">
-            <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-custom-field{{ custom_field.custom_field_id }}" />
-            <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </div>
-          {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
-          {% endif %} </div>
-      </div>
-      {% endif %}
-      {% endfor %}
-      <div class="form-group">
-        <label>{{ entry_default }}</label>
-        <div class="col-sm-10"> {% if default %}
-            <label>{{ text_yes }}</label>
-            <input type="radio" name="default" value="1" checked="checked" />
-            <label>{{ text_no }}</label>
-            <input type="radio" name="default" value="0" />
-          {% else %}
-            <label>{{ text_yes }}</label>
-            <input type="radio" name="default" value="1" />
-            <label>{{ text_no }}</label>
-            <input type="radio" name="default" value="0" checked="checked" />
-          {% endif %} </div>
+      {% include 'helium/template/common/fields/firstname.twig' with {required: true,  type: 'new_address'} %}
+      {% include 'helium/template/common/fields/lastname.twig'  with {required: true,  type: 'new_address'} %}
+      {% include 'helium/template/common/fields/email.twig'     with {required: true,  type: 'new_address'} %}
+      {% include 'helium/template/common/fields/company.twig'   with {required: false, type: 'new_address'} %}
+      {% include 'helium/template/common/fields/address1.twig'  with {required: true,  type: 'new_address'} %}
+      {% include 'helium/template/common/fields/address2.twig'  with {required: false, type: 'new_address'} %}
+      {% include 'helium/template/common/fields/city.twig'      with {required: true,  type: 'new_address'} %}
+      {% include 'helium/template/common/fields/country.twig'   with {required: true,  type: 'new_address'} %}
+      {% include 'helium/template/common/custom_fields.twig'    with {type: 'new_address', location: 'address'} %}
+      <div class="form-control">
+        <input id="shipping_address_guest" type="checkbox" name="default" value="1" {% if default %}checked="checked"{% endif %} />
+        <label for="shipping_address_guest">{{ entry_default }}</label>
       </div>
     </fieldset>
     <div class="btn-group spaced">
